third_party/blink/renderer/modules/accessibility/ax_slider.cc
@@ -113,6 +113,10 @@ bool AXSlider::OnNativeSetValueAction(const String& value) {
 
   // Fire change event manually, as LayoutSlider::setValueForPosition does.
   input->DispatchFormControlChangeEvent();
+
+  // Ensure the AX node is updated.
+  AXObjectCache().MarkAXObjectDirty(this, false);
+
   return true;
 }
 
